...
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Username">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="Password"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <ProgressBar
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnSignin"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_button_blue"
                        android:text="SIGN IN"
...
