...
                android:layout_weight="1"
                android:gravity="left"
                android:text="Name :"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Name"
                android:textSize="17sp" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="17sp"
                android:layout_weight="1"
                android:text="Email"
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
...
