...
        tools:context="info.blogbasbas.logintesting.ui.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <android.support.design.widget.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:tabTextColor="@android:color/white">

...
